--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.14.4",
     "node-sass": "^4.14.1",
+    "password-hash": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-radio-group": "^3.0.3",
